Semester 3 (fall)/OOP 244/ws2/DIY/Workshop 2/errors.txt
Population.cpp: In function ‘void sdds::deallocateMemory()’:
Population.cpp:208:14: error: ‘i’ was not declared in this scope
         for (i = 0; i < numPostal; i++) {
              ^
